crates/vexor-compiler/tests/golden/error/output/basic.err
parse error at line 2, column 1
  |
2 | r = 10
  | ^
invalid keyword 'export'